# solobuddy

./: .cursorrules  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  CONCLUSION_CONTEXT_SIGNALS.md  HANDOFF.md  HANDOFF_BUDDY_QUEUE.md  HANDOFF_CODE_SIMPLIFIER.md  HANDOFF_GITHUB_OAUTH.md  HANDOFF_GITHUB_PROJECTS_SYNC.md  HANDOFF_INTENT_BASED_AI.md  HANDOFF_POST_EDITOR.md  HANDOFF_PROJECT_VOICE.md  HANDOFF_UI_VERIFICATION.md  LICENSE  PROFILE.md  PROJECT_INDEX.md  README.md  SOUL.md  SPEC-LOBSTER-SETUP.md  SPEC-MARKETING-AGENCY.md  TRASH-FILES.md  prompt_chat_personality.md  prompt_code_simplifier_batch1.md  prompt_ui_redesign.md  pyproject.toml  system-prompt-v2.md
.agent/: CLAUDE_MIGRATED.md  HOOK.md  MAIN.md
.ai/: README.md  config.example.json5  setup.sh
.subagents/: manifest.json
TRASH/: PROJECTS.md  ROADMAP.md  SESSION_HANDOFF.md  TRASH-FILES.md  app.js.bak  bip.db.old
archive/: AGENT_RULES.md  HANDOFF_BUDDY_QUEUE_COMPLETION.md  HANDOFF_CONTEXT_SIGNAL_RESEARCH.md  HANDOFF_GITHUB_404.md  HANDOFF_LOCAL_PROJECTS.md  HANDOFF_SOLOBUDDY.md  HANDOFF_UI_REDESIGN.md  prompt_bip_integration.md  prompt_chat_interface.md  prompt_context_signal_architecture.md  prompt_debug_github_connect.md  prompt_github_field_autoupdate.md  prompt_github_integration.md  prompt_github_integration_impl.md  prompt_local_projects_connector.md  prompt_proactive_buddy.md  prompt_solobuddy_integration.md
data/: activity-snapshot.json  my-posts.json  projects.example.json  projects.json
docs/: BUILD_IN_PUBLIC.md  COMMANDS.md  HANDOFF_2026-01-12.md  SESSION_HANDOFF.md  STACK.md  TESTS.md  (+2 more)
(+167 files in other folders)
