[project]
name = "bip-buddy"
version = "0.1.0"
description = "Vision AI Assistant - Personal PR Director for Build in Public creators"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "structlog>=24.0.0",
    "aiosqlite>=0.20.0",
    "keyring>=25.0.0",
]

[project.scripts]
vision = "vision.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
